changed sticky behavior  of the nav

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -1,4 +1,9 @@
 .nav {
+  position: sticky;
+  top:0px;
+  padding: .35em;
+  background-color: white;
+  opacity: .75;
   li {
     display: inline-block;
     margin-right: 1em;  
