--- a/src/components/layout/styles.module.scss
+++ b/src/components/layout/styles.module.scss
@@ -1,8 +1,8 @@
 
 
 .defaultContainer {
-    margin: 0 auto;
-    max-width: 960;
+    margin: 0px auto;
+    max-width: 960px;
     padding: 0px 1.0875rem 1.45rem;
-    padding-top: 0;
+    padding-top: 0px;
 }
