--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -1,5 +1,5 @@
-.nav {
-  position: sticky;
+.navSticky {
+  position: sticky !important;
   top:0px;
   padding: .35em;
   background-color: white;
