--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -1,11 +1,3 @@
-.navSticky {
-  position: sticky !important;
-  top:0px;
-  padding: .35em;
-  background-color: white;
-  opacity: .75;
-  li {
-    display: inline-block;
-    margin-right: 1em;  
-  }
+.navFixed {
+  background: rgba(248, 237, 233, 0) !important;
 }
