added giant nampi image at header

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -3,3 +3,8 @@
 .header {
     background-color: rebeccapurple;
 }
+
+.imageHolder {
+    max-width: 20em !important;
+    max-height: 20em !important;
+}
