added a background image to the blog page

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,7 +1,7 @@
 
 
 .header {
-    background-color: rebeccapurple;
+    background: url("../../images/min_backgr.png") no-repeat fixed center !important;
 }
 
 .imageHolder {
