small style change

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -1,3 +1,8 @@
 .navFixed {
   background: rgba(248, 237, 233, 0.1) !important;
 }
+
+.navBorder {
+  border-bottom: 1.5px solid lightgrey;
+  padding-bottom: 0em;
+}
