applied border bottom of bulma-hero in header

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -5,7 +5,14 @@
 }
 
 .baseHeader {
-    padding-top: 4em;
+    padding-top: 6em;
+    
+}
+
+.heroEnd {
+    border-bottom: 2px solid grey;
+    width: 75% !important;
+    padding-bottom: 2em;
 }
 
 .imageHolder {
