added bottom border to right top title

--- a/src/components/layout/TitleGrid/styles.module.scss
+++ b/src/components/layout/TitleGrid/styles.module.scss
@@ -4,3 +4,7 @@
     border-right: .15em solid rgb(235, 233, 233);
     margin-right: 3em;
 }
+
+.rightTop {
+    border-bottom: 2px solid lightgrey;
+}
