changed some styling

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,6 +1,8 @@
 
 
 .header {
+    padding-top:10em;
+    padding-bottom:10em;
     background: url("../../images/min_backgr.png") no-repeat fixed center !important;
 }
 
