just changed styling a bit

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -12,8 +12,9 @@
 }
 
 .heroEnd {
-    border-bottom: 2px solid grey;
+    border-bottom: 2px solid lightgrey;
     padding-bottom: 2em;
+    width: 75% !important;
 }
 
 .imageHolder {
