just added text to the iconbar

--- a/src/components/IconBar/styles.module.scss
+++ b/src/components/IconBar/styles.module.scss
@@ -9,6 +9,11 @@
     top:0;
     left:0;
     background-color: lightgrey;
+
+    p {
+        writing-mode: vertical-lr;
+        text-orientation: upright; 
+    }
 }
 
 .iconHolder {
