changed font usage

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -4,10 +4,12 @@
     padding-top:10em;
     padding-bottom:10em;
     background: url("../../images/min_backgr.png") no-repeat fixed center !important;
+    font-family: 'Cinzel', 'Times New Roman', Times, serif;
 }
 
 .baseHeader {
     padding-top: 6em;
+    font-family: 'Cinzel', 'Times New Roman', Times, serif;
     
 }
 
