--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -1,5 +1,6 @@
 .navFixed {
   background: rgba(248, 237, 233, 0.1) !important;
+  font-family: 'Cinzel', 'Times New Roman', Times, serif;
 }
 
 .navBorder {
