--- a/src/components/BlogPreview/styles.module.scss
+++ b/src/components/BlogPreview/styles.module.scss
@@ -14,3 +14,11 @@
     margin-top:-1em !important;
     color: lightgrey !important;
 }
+
+.mainContainer {
+    hr {
+        background-color: grey;
+        padding: .25em;
+        border-radius: 1em;
+    }
+}
