changed styling a bit

--- a/src/components/PostsSummary/styles.module.scss
+++ b/src/components/PostsSummary/styles.module.scss
@@ -5,6 +5,9 @@
   margin-bottom: 1.5em; 
 }
 
-.firstSpan {
-    
+.hr {
+  background-color: lightgrey;
+  padding: .25em;
+  border-radius: 1em;
+
 }
