--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -2,6 +2,7 @@
   background: rgba(248, 237, 233, 0.1) !important;
   font-family: 'Cinzel', 'Times New Roman', Times, serif;
   max-height: 20vh;
+  max-width: 100vw;
 }
 
 .navbarBasicExample {
