--- a/src/components/IconBar/styles.module.scss
+++ b/src/components/IconBar/styles.module.scss
@@ -9,7 +9,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: lightgrey;
+    background-color: white;
     p {
       writing-mode: vertical-lr;
       text-orientation: upright;
