--- a/src/components/BackButton/styles.module.scss
+++ b/src/components/BackButton/styles.module.scss
@@ -1,10 +1,10 @@
 
 .backButton {
     font-size: 2em;
-    color: black;
+    color: grey;
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
     &:hover {
-        color:grey;
+        color:white;
         cursor: pointer;
         font-size: 2.5em;
     }
