--- a/src/components/BlogPreview/styles.module.scss
+++ b/src/components/BlogPreview/styles.module.scss
@@ -1,7 +1,7 @@
 
 .textContainer::first-letter {
-    color:black;
-    font-size: 3em;
+    color:grey;
+    font-size: 2em;
     font-weight: bold;
     line-height: 0;
 }
@@ -16,9 +16,25 @@
 }
 
 .mainContainer {
+    font-family: 'Raleway', 'Times New Roman', Times, serif;
+    line-height: 2;
+    font-size: 16px;
     hr {
-        background-color: grey;
+        //background-color: whitesmoke;
         padding: .25em;
         border-radius: 1em;
     }
+    h1 {
+        text-shadow: 1px 1px lightgrey;
+        //margin-bottom: .5em;
+        font-size: 1.75em;
+        border-bottom: 1em solid whitesmoke;
+        &::first-letter {
+            color:black;
+            font-size: 2.5em;
+            font-weight: bold;
+            line-height: 0;
+        }
+    }
+    
 }
