deactivated border right

--- a/src/components/layout/TitleGrid/styles.module.scss
+++ b/src/components/layout/TitleGrid/styles.module.scss
@@ -4,7 +4,7 @@
     z-index: -1;
   }
   @media (min-width: 768px) {
-    border-right: 0.15em solid rgb(235, 233, 233);
+    //border-right: 0.15em solid rgb(235, 233, 233);
     margin-right: 3em;
     img {
         max-width: initial;
