--- a/src/components/Post/styles.module.scss
+++ b/src/components/Post/styles.module.scss
@@ -5,6 +5,7 @@
 }
 
 .articleFull {
+    margin-top: 15em;
     font-family: 'Raleway', 'Times New Roman', Times, serif;
     line-height: 2;
     font-size: 16px;
