--- a/src/components/Post/styles.module.scss
+++ b/src/components/Post/styles.module.scss
@@ -9,8 +9,9 @@
     font-family: 'Raleway', 'Times New Roman', Times, serif;
     line-height: 2;
     font-size: 16px;
-    text-align: justify;
+    text-align: left;
     h1 {
+        padding-top: 1.5em;
         text-shadow: 1px 1px lightgrey;
         //margin-bottom: .5em;
         font-size: 1.75em;
