corrected image import

--- a/src/components/specific/Header/styles.module.scss
+++ b/src/components/specific/Header/styles.module.scss
@@ -3,7 +3,7 @@
 .header {
     padding-top:10em;
     padding-bottom:10em;
-    background: url("../../images/min_backgr.png") no-repeat fixed center !important;
+    background: url("../../../images/min_backgr.png") no-repeat fixed center !important;
     font-family: 'Cinzel', 'Times New Roman', Times, serif;
 }
 
