--- a/src/components/specific/MapApp/VizController/AppLayout/AppTopBar/styles.module.scss
+++ b/src/components/specific/MapApp/VizController/AppLayout/AppTopBar/styles.module.scss
@@ -1,5 +1,10 @@
 
 
 .appTopBar {
-    border-bottom: 1em solid #41b7d8;
+    
+    height:5em;
+    border-bottom: .5em solid #41b7d8;
+    h1 {
+        padding-left: 10em;
+    }
 }
