--- a/src/components/specific/MapApp/VizController/Summary/styles.module.scss
+++ b/src/components/specific/MapApp/VizController/Summary/styles.module.scss
@@ -2,9 +2,9 @@
 .summaryContainer {
     padding: 5em;
     border-left: .15em solid lightgrey;
-    min-height: 100vh;
+    min-height: 85vh;
     overflow-y: scroll;
     h2 {
-        border-bottom: 2px solid #41b7d8;
+        border-bottom: 2px solid #f36;
     }
 }
