changed base layout of the app

--- a/src/components/specific/MapApp/VizController/Summary/styles.module.scss
+++ b/src/components/specific/MapApp/VizController/Summary/styles.module.scss
@@ -1,6 +1,6 @@
 
 .summaryContainer {
-    border-left: .15em solid lightgrey;
+    border-right: .25em solid lightgrey;
     min-height: 85vh;
     h2 {
         border-bottom: 2px solid #f36;
