--- a/src/components/specific/MapApp/VizController/AppLayout/AppTopBar/styles.module.scss
+++ b/src/components/specific/MapApp/VizController/AppLayout/AppTopBar/styles.module.scss
@@ -1,10 +1,10 @@
 
 
 .appTopBar {
-    
     height:5em;
-    border-bottom: .5em solid #41b7d8;
+    border-left: 2vw solid #41b7d8;
+    border-bottom: 2em solid whitesmoke;
     h1 {
-        padding-left: 10em;
+        padding-left: .5em;
     }
 }
