min + max height adjustment

--- a/src/components/specific/MapApp/VizController/SearchNView/styles.module.scss
+++ b/src/components/specific/MapApp/VizController/SearchNView/styles.module.scss
@@ -6,7 +6,8 @@
   .mainContent {
     padding: 3em;
     
-    min-height: 75vh;
+    min-height: 79vh;
+    max-height: 79vh;
   }
   ul {
       background: whitesmoke;
