reduced the fontSize of the tabs

--- a/src/components/specific/MapApp/VizController/SearchNView/styles.module.scss
+++ b/src/components/specific/MapApp/VizController/SearchNView/styles.module.scss
@@ -3,6 +3,9 @@
   border-top: 1em solid whitesmoke;
   min-height: 75vh;
   overflow-y: scroll;
+  li {
+    font-size: .85em;
+  }
   .mainContent {
     padding: 3em;
     
