factoid list now displayed on left side

--- a/src/components/specific/MapApp/VizController/FactoidList/styles.module.scss
+++ b/src/components/specific/MapApp/VizController/FactoidList/styles.module.scss
@@ -1,7 +1,7 @@
 
 
 .mainContainer {
-  border-top: 0.5em solid whitesmoke;
-  border-right: 0.5em solid whitesmoke;
-  padding: 3em;
+  //border-top: 0.5em solid whitesmoke;
+  //border-right: 0.5em solid whitesmoke;
+  //padding: 3em;
 }
